# CommandsApp

./: CMakeLists.txt  LICENSE  Makefile  README.md
src/: App.cpp  App.h  CMakeLists.txt  CommandDialog.cpp  CommandDialog.h  CommandManager.cpp  CommandManager.h  GroupAddCommandsDialog.cpp  GroupAddCommandsDialog.h  MainFrame.cpp  MainFrame.h  README.md  main.cpp
